fix overflow issue by the list ul li

--- a/assets/css/blog/content.css
+++ b/assets/css/blog/content.css
@@ -145,7 +145,7 @@ is the very first element in the post content */
 }
 
 .gh-content ul li {
-    margin: 0px -24px 8px;
+    margin: 0 0 8px -24px;
     list-style: none;
     background-image: url("data:image/svg+xml,%3Csvg width='12' height='1' viewBox='0 0 14 1' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline y1='0.5' x2='14' y2='0.5' stroke='%235E6AD2'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
